Fixed location text alignment

--- a/less/site/default/header.less
+++ b/less/site/default/header.less
@@ -32,7 +32,7 @@ header {
         }
     }
 
-    height: 85vh;
+    height: 91vh;
     background-repeat: no-repeat;
     background-size: cover;
     background-position-x: 50%;
