--- a/less/site/default/navigation.less
+++ b/less/site/default/navigation.less
@@ -35,7 +35,7 @@ nav ul li {
 
 .nav-fixed {
     transition-property: background, opacity;
-    transition-duration: 0.6s;
+    transition-duration: 0.4s;
     position: fixed;
     top: 0;
     background: @main-green;
